--- a/untitled.html
+++ b/untitled.html
@@ -52,30 +52,15 @@
         $('input[value="Run Script"]').click( function(){
           console.log('Caught a "Run Script" click event.');
           $("#output_area").addClass( 'selected');
-          function loop_and_display() {
-          var output_html;
-          var count = 0;
-          output_html="<p>The script is starting...</p>";
-          while (count<10) {
-            output_html= output_html + "Times this loop has run: "+ count +"<br />";
-            count++;
-          }
-          output_html += "<p>The script is done.</p>";
-          $("#output_area").html(output_html);
-        }
+          alert("The looping function should go here.");
         });
         // attach an event listener to the Clear button here
-        $('input[value="Clear" ]').click( function(){
-          console.log('Caught a "Clear" click event.');
-          $("#output_area").removeClass( 'selected' );
-          $("#output_area").html( "<p>Click the Run Script button.</p>");
-        });
       }); // end of $(document).ready
       /*
         This function prepares a string variable with HTML and then uses jQuery
         to load the variable contents into the DOM.
       */
-      /*function loop_and_display() {
+      function loop_and_display() {
         var output_html;
         var count = 0;
         output_html="<p>The script is starting...</p>";
@@ -85,7 +70,7 @@
         }
         output_html += "<p>The script is done.</p>";
         $("#output_area").html(output_html);
-      }*/
+      }
     </script>
   </head>
   <body>
@@ -102,13 +87,13 @@
       <dt>What is the class that changes the style of the output area?</dt>
       <dd>.idle</dd>
       <dt>What does the selector input[value="Run Script"] do? Enter the URLs of the places you researched with your explanation.</dt>
-      <dd>changes the background to gold, adds an alert <a href="http://api.jquery.com/input-selector/">http://api.jquery.com/input-selector/</a></dd>
+      <dd>changes background to gold</dd>
       <dt>What is the URL of the documentation for the jQuery <kbd>.addClass</kbd> method?</dt>
-      <dd><a href="http://api.jquery.com/addClass/">http://api.jquery.com/addClass/</a></dd>
+      <dd>(put your answer here)</dd>
       <dt>What is the URL of the documentation for GitHub Pages? What does creating the <kbd>gh-pages</kbd> branch do on github.com</dt>
-      <dd><a href="https://github.com/documentationjs/documentation">https://github.com/documentationjs/documentation</a> gh-pages branches provide hosting directly from your github repository.</dd>
+      <dd>(put your answer here)</dd>
       <dt>What is the URL of the documentation for the <kbd>$(document).ready()</kbd> jQuery method?</dt>
-      <dd><a href="http://learn.jquery.com/using-jquery-core/document-ready/">http://learn.jquery.com/using-jquery-core/document-ready/</a> determines the state of "rediness" of a document in a page.</dd>
+      <dd>(put your answer here)</dd>
 
     </dl>
 
