--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
           while (count<10) {
             output_html= output_html + "Times this loop has run: "+ count +"<br />";
             count++;
-          }
+          };
           output_html += "<p>The script is done.</p>";
           $("#output_area").html(output_html);
         }
+        loop_and_display();
         });
         // attach an event listener to the Clear button here
         $('input[value="Clear" ]').click( function(){
